--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "trivia3",
+  "name": "trivia",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^7.1.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.3",
+    "react-router-dom": "6",
     "react-scripts": "5.0.0"
   },
   "scripts": {
@@ -32,5 +33,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/dom": "^8.13.0",
+    "autoprefixer": "^10.4.4",
+    "msw": "^0.39.2",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23"
   }
 }
